tests/sem/pass/return_expr.c
void no() {}
void main() {
	return no();
}
