tests/sem/error/shadow_mix.c
struct aaa
{
    int aaa;
};

struct aaa
{
    int aaa;
};

int aaa;

void aaa() {
    return aaa;
}
